--- a/src/Features/TeamProperties/TeamPropertiesTable/teamPropertiesTable.module.scss
+++ b/src/Features/TeamProperties/TeamPropertiesTable/teamPropertiesTable.module.scss
@@ -11,6 +11,7 @@
 }
 
 .tableHeader {
+  align-items: flex-end;
   display: flex;
   justify-content: space-between;
   margin: 1.5rem 0;
